# ekf

./: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties
nativeEKF/: CMakeLists.txt  NativeFilterMatrixOps.cpp  README.md  us_ihmc_ekf_filter_NativeFilterMatrixOpsWrapper.h
resources/: flyingBox.sdf  parameters.xml  simpleArm.sdf  simpleArm.urdf  simpleArmDualIMU.sdf
src/main/java/us/ihmc/ekf/: ImuOrientationEstimator.java
src/test/java/us/ihmc/ekf/: FilterMutationTest.java  ImuOrientationEstimatorTest.java  ImuOrientationEstimatorWithMagnetometerTest.java  (+1 more)
src/us/ihmc/ekf/filter/: ComposedState.java  EmptyState.java  EstimatorState.java  FilterMatrixOps.java  FilterTools.java  JointPositionSensor.java  JointState.java  Parameters.java  RobotState.java  Sensor.java  State.java  StateEstimator.java
src/us/ihmc/ekf/interfaces/: EstimatorController.java  FullRobotModel.java  MeasurementCorruptor.java  RobotSensorReader.java  SimulationSensorReader.java
src/us/ihmc/ekf/robots/: RobotVisualizer.java  SimpleArmContactPoints.java  SimpleArmController.java  SimpleArmRobot.java  SimpleArmSensorReader.java  SimpleArmSimulation.java  SimpleArmVisualizer.java
src/visualizers/Configurations/: simpleArmDualIMU_SimpleArmSimulation__RegistryConfiguration
src/visualizers/resources/: flyingBox.urdf  parameters.xml  simpleArm.urdf
test/us/ihms/ekf/filter/: EstimatorStateTest.java  FilterMatrixOpsTest.java  IntegrationTest.java  OrientationEstimationTest.java  StateEstimatorTest.java
test/us/ihms/ekf/sensor/: LinearAccelerationSensorTest.java
(+139 files in other folders)
